# zyra

./: Cargo.toml  README.md
.cursor/: zyra-guide.md
src/: lib.rs  main.rs
src/app/: branch.rs  goto.rs  init.rs  log.rs  mod.rs  next.rs  prev.rs  restack.rs  submit.rs
src/cli/: branch.rs  cmd.rs  goto.rs  init.rs  log.rs  mod.rs  next.rs  prev.rs  restack.rs  submit.rs
src/data/: display.rs  mod.rs  operations.rs  storage.rs
src/errors/: git.rs  mod.rs
src/gh/: mod.rs  pulls.rs
src/git/: branch.rs  commit.rs  mod.rs  rebase.rs  repo.rs
src/tui/: mod.rs  pulls.rs
