[package]
name = "zyra"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.34", features = ["color", "derive"] }
colored = "3.0.0"
dirs = "6.0.0"
hashbrown = "0.15.2"
inquire = { version = "0.7.5", features = ["editor"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }